@startuml Libraries
package "pico_hal" {
  class Gpio
  class Timer
  class Spi
  class Pwm
  class Dma
  class Adc
  class Uart
}

package "board" {
  class BoardInit
  class Lcd0in96
}

package "lvglport" {
  class LvglPort
}

Lcd0in96 --> Gpio
Lcd0in96 --> Timer
Lcd0in96 --> Spi
Lcd0in96 --> Pwm
Lcd0in96 --> Dma

LvglPort --> Lcd0in96
@enduml
